Schematic article and updated biblio

--- a/biblio.bib
+++ b/biblio.bib
@@ -212,6 +212,7 @@
 
 @book{menghini:saverio,
   author = {Menghini, Anna Bruna and Palmieri, Valerio},
+  ids = {menghini:2009saverio},
   shorttitle = {Saverio {{Muratori}}},
   title = {Saverio {{Muratori}}. {{Didattica}} Della {{Composizione}} Architettonica Nella {{Facoltà}} Di {{Architettura}} Di {{Roma}} 1954–1973},
   url = {https://www.academia.edu/1137915/Saverio_Muratori._Didattica_della_Composizione_architettonica_nella_Facolt%C3%A0_di_Architettura_di_Roma_1954-1973},
@@ -230,7 +231,9 @@
   publisher = {{Aga Khan Program for Islamic Architecture at Harvard University : Massachusetts Institute of Technology}},
   series = {Procedings of the International Symposium ... {{March}} 1995},
   shorttitle = {Typological Process and Design Theory},
-  title = {Typological Process and Design Theory}
+  title = {Typological Process and Design Theory},
+  url = {https://archnet.org/publications/4240},
+  urldate = {2020-01-15}
 }
 
 @book{pigafetta:1993architettura,
@@ -327,6 +330,21 @@
   series = {Documenti di architettura},
   shorttitle = {La piazza, la chiesa, il parco},
   title = {La piazza, la chiesa, il parco: saggi di storia dell'architettura (XV-XIX secolo)}
+}
+
+@article{tagliaventi:2006european18,
+  author = {Tagliaventi, Gabriele},
+  date = {2006-08-01},
+  issn = {0731-0455},
+  journaltitle = {Places},
+  langid = {english},
+  number = {1},
+  pages = {46--52},
+  shorttitle = {The {{European Transect}}},
+  title = {The {{European Transect}}: {{An Organic}} Way for {{Architecture}} to {{Develop Towns}}, {{Cities}}, and {{Metropolises}}},
+  url = {https://escholarship.org/uc/item/4xc2j7qw},
+  urldate = {2020-01-02},
+  volume = {18}
 }
 
 @collection{tilmans:2010performing,
