--- a/_biblio.bib
+++ b/_biblio.bib
@@ -255,6 +255,23 @@
 % == BibLateX quality report for carpenzano:2019storico:
 % Missing required field 'author'
 
+@article{casciato:2003italian62,
+  title = {The {{Italian Mosaic}}: {{The Architect}} as {{Historian}}},
+  shorttitle = {The {{Italian Mosaic}}},
+  author = {Casciato, Maristella and Fifield, Barry},
+  date = {2003},
+  journaltitle = {Journal of the Society of Architectural Historians},
+  shortjournal = {JSAH},
+  volume = {62},
+  pages = {92--101},
+  issn = {0037-9808},
+  doi = {10.2307/3655086},
+  langid = {english},
+  number = {1}
+}
+% == BibLateX quality report for casciato:2003italian62:
+% ? Title looks like it was stored in title-case in Zotero
+
 @article{castex:2014saverio,
   ids = {castex:2014saverioa},
   title = {Saverio Muratori (1910-1973). La ville comme seul modèle},
@@ -392,6 +409,16 @@
 }
 % == BibLateX quality report for costa:2015arquitetura:
 % Missing required field 'author'
+
+@book{croce:1904estetica,
+  title = {Estetica come scienza dell'espressione e linguistica generale : teoria e storia},
+  shorttitle = {Estetica come scienza dell'espressione e linguistica generale},
+  author = {Croce, Benedetto},
+  date = {1904},
+  publisher = {{Electa}},
+  location = {{Napoli}},
+  langid = {italiano}
+}
 
 @article{cunningham:2010triangulating14,
   title = {Triangulating Utopia: {{Benjamin}}, {{Lefebvre}}, {{Tafuri}}},
@@ -833,6 +860,22 @@
   number = {2}
 }
 
+@incollection{portoghesi:1982borromini,
+  title = {F. Borromini e l'« Opus architectonicum »},
+  booktitle = {L'angelo della storia: teorie e linguaggi dell'architettura},
+  author = {Portoghesi, Paolo},
+  date = {1982},
+  pages = {77--96},
+  publisher = {{G. Laterza e figli}},
+  location = {{Roma : Bari}},
+  annotation = {OCLC: 465449590},
+  langid = {italian},
+  number = {868},
+  series = {Biblioteca di cultura moderna}
+}
+% == BibLateX quality report for portoghesi:1982borromini:
+% Missing required field 'editor'
+
 @incollection{portoghesi:2013saverio,
   title = {Saverio Muratori: la testimonianza di un allievo},
   shorttitle = {Saverio Muratori e Aldo Rossi},
@@ -1012,7 +1055,7 @@
   shorttitle = {L'architettura come processo},
   author = {Strappa, Giuseppe},
   date = {2015},
-  publisher = {{Franco Angeli Editore}},
+  publisher = {{Franco Angeli}},
   location = {{Milano}},
   annotation = {OCLC: 907366778},
   isbn = {978-88-917-0597-6},
@@ -1286,6 +1329,21 @@
   abstract = {Muratori concepisce Studi per una operante storia del territorio come una lettura del territorio, una sua interpretazione. E’ una raccolta di disegni (255 disegni a mano e 18 prove di stampa), in cui sono riportati  soltanto i tratti rilevanti dei territori considerati al fine dello studio. La tesi ha come obiettivo quello di compiere un’analisi filologica dei documenti e cercare di cogliere le finalità, valutando la sua attendibilità ai giorni nostri. Nella scelta del titolo, Studi per una operante storia del territorio. Il libro incompiuto di Saverio Muratori,inserendo nel titolo quello originale dell'opera, si rende esplicita l’intenzione filologica di base da cui si sviluppano le considerazioni fatte nello svolgimento di questa ricerca, costantemente attenta alla coerenza con i disegni analizzati. Questa coerenza è dettata dalla volontà di perseguire le logiche di confronto che hanno caratterizzato il lavoro di Muratori. Il titolo che descrive il corpus dei disegni mette in primo piano il sistema uomo-natura, che il territorio rappresenta nella sua totalità di unicum. La tesi è suddivisa in due parti. La prima verte sullo studio dei materiali d’archivio relativi agli Studi sul territorio, in cui è spiegato il metodo di catalogazione utilizzato. Fondamentale, ai fini di un primo approccio alla ricerca, è il contributo dato dall’architetto Alessandro Giannini attraverso la preliminare schedatura del materiale ed dell'analisi riportata in Leggendo le minute dell’Atlante del territorio di Saverio Muratori. La seconda parte della tesi verte su un percorso dialettico tra la filosofia, la teoria, la didattica e la pratica progettuale di Muratori, ambiti da tenere in considerazione per una interpretazione critica alla sua metodologia, che ha come fine ultimo il reale, quindi il territorio, in cui trova, prima attraverso la trattazione teorica esposta in Civiltà e territorio, la concreta conclusione nei disegni degli Studi per una operante storia del territorio.},
   langid = {italian},
   type = {Tesi di dottorato}
+}
+
+@book{talenti:2000histoire,
+  title = {L’histoire de l'architecture en France: émergence d'une discipline (1863–1914)},
+  shorttitle = {L'histoire de l'architecture en France},
+  author = {Talenti, Simona},
+  date = {2000},
+  publisher = {{Picard}},
+  location = {{Paris}},
+  abstract = {" De quoi n'a-t-on pas écrit l'histoire ? Il en reste une cependant qui est encore à faire, et qui ne serait pas la moins intéressante. Je parle de l'histoire des histoires " (César Daly, 1849). Si, depuis les années 1970, de nombreux auteurs se sont penchés sur l'historiographie politique, artistique ou scientifique, l'histoire de l'histoire de l'architecture a fait l'objet de peu d'études. Les raisons en sont multiples : l'éparpillement des sources, la crise de l'architecture elle-même, les clivages qui peuvent exister entre architectes et historiens de l'art. Sans doute la " muséalisation " de l'architecture, la définition du patrimoine et la pédagogie, sont aujourd'hui des questions incontournables. Examiner les origines de l'historiographie de l'architecture - qui a connu récemment une émergence remarquable - est une priorité pour nourrir ce débat. La matière est riche. Depuis les publications des antiquaires du XVIIIe siècle, la connaissance des monuments ne cesse de progresser. L'exemple des naturalistes, des grands fondateurs de l'histoire politique et des archéologues suscitent la volonté de concevoir une autre histoire de l'architecture, plus scientifique. En France, les années 1863 à 1914 s'avèrent une véritable période charnière caractérisée par d'innombrables histoires, essais, études globales et partielles, par une évolution continue des moyens de représentation de l'architecture, par la multiplication des établissements d'enseignement et des approches pédagogiques. Parmi les grands acteurs de cette période figurent Viollet-le-Duc, Ramée, Dartein, Baudot, ou Ruprich-Robert. A l'issue de leurs travaux analysés ici méthodiquement dans leur contexte, le visage de l'histoire de l'architecture est entièrement transformé. Elle a trouvé sa propre définition, elle a affiné ses moyens de représentation et dispose désormais d'outils méthodologiques efficaces.},
+  eprint = {lx_qAAAAMAAJ},
+  eprinttype = {googlebooks},
+  isbn = {978-2-7084-0585-1},
+  langid = {french},
+  pagetotal = {300}
 }
 
 @book{tilmans:2010performing,
