Setting up to do Tafuri+Lefebvre on plance vs time

--- a/_biblio.bib
+++ b/_biblio.bib
@@ -524,6 +524,35 @@
 % == BibLateX quality report for hoekstra:2005building:
 % Unexpected field 'isbn'
 
+@book{krier:1991urban,
+  title = {Urban Space},
+  author = {Krier, Rob},
+  date = {1991},
+  edition = {5},
+  publisher = {{Academy Editions}},
+  location = {{London}},
+  annotation = {OCLC: 258219151},
+  editora = {Rowe, Colin},
+  editoratype = {collaborator},
+  isbn = {978-0-85670-576-2},
+  keywords = {Biblioteca UCFCT DArq},
+  langid = {english},
+  pagetotal = {174}
+}
+
+@book{krier:2009architecture,
+  title = {The Architecture of Community},
+  author = {Krier, Léon},
+  editor = {Thadani, Dhiru A. and Hetzel, Peter J.},
+  date = {2009},
+  publisher = {{Island Press}},
+  location = {{Washington, D.C.}},
+  annotation = {OCLC: ocn276139074},
+  isbn = {978-1-59726-578-2},
+  keywords = {Architecture,Architecture and society,City planning,Human factors,Philosophy},
+  pagetotal = {459}
+}
+
 @thesis{leach:2006choosing,
   title = {Choosing History: A Study of {{Manfredo Tafuri}}’s Theorisation of Architectural History and Architectural History Research},
   shorttitle = {Choosing History},
@@ -551,6 +580,20 @@
   keywords = {Architectural historians,Architecture,Historiography,Italy,Tafuri; Manfredo},
   langid = {english},
   pagetotal = {323}
+}
+
+@book{lefebvre:1968droit,
+  title = {Le droit à la ville},
+  author = {Lefebvre, Henri},
+  date = {1968},
+  edition = {2},
+  publisher = {{Anthropos}},
+  location = {{Paris}},
+  keywords = {Espaço e política,Sociedade urbana,Urbanismo},
+  langid = {french},
+  number = {1},
+  pagetotal = {164},
+  series = {Société et urbanisme}
 }
 
 @article{lobsinger:2006new59,
@@ -937,6 +980,22 @@
   editoratype = {collaborator},
   langid = {spanish},
   translator = {Cirlot, Juan-Eduardo}
+}
+
+@book{rossi:1982architecture,
+  title = {The architecture of the city},
+  author = {Rossi, Aldo},
+  date = {1982},
+  publisher = {{MIT Press}},
+  location = {{Cambridge, Mass}},
+  editora = {Eisenman, Peter and Graham Foundation for Advanced Studies in the Fine Arts and Institute for Architecture {and} Urban Studies},
+  editoratype = {collaborator},
+  isbn = {978-0-262-18101-3},
+  keywords = {Architecture,City planning},
+  langid = {engita},
+  pagetotal = {201},
+  series = {Oppositions books},
+  translator = {Ghirardo, Diane Yvonne and Ockman, Joan}
 }
 
 @book{rossi:1995architettura,
