Zevi vs Muratori

--- a/_biblio.bib
+++ b/_biblio.bib
@@ -1240,7 +1240,7 @@
 }
 
 @incollection{tafuri:1991gaia,
-  title = {La "gaia erranza": ipermoderni (postmoderni)},
+  title = {La “gaia erranza”: ipermoderni (postmoderni)},
   booktitle = {Atlante dell'architettura italiana del novecento},
   author = {Tafuri, Manfredo},
   editor = {Ciucci, Giorgio and Dal Co, Francesco},
@@ -1390,7 +1390,7 @@
   type = {Tesi di dottorato}
 }
 
-@book{talenti:2000histoire,
+@book{talenti:2000lhistoire,
   title = {L’histoire de l'architecture en France: émergence d'une discipline (1863–1914)},
   shorttitle = {L'histoire de l'architecture en France},
   author = {Talenti, Simona},
@@ -1398,8 +1398,6 @@
   publisher = {{Picard}},
   location = {{Paris}},
   abstract = {" De quoi n'a-t-on pas écrit l'histoire ? Il en reste une cependant qui est encore à faire, et qui ne serait pas la moins intéressante. Je parle de l'histoire des histoires " (César Daly, 1849). Si, depuis les années 1970, de nombreux auteurs se sont penchés sur l'historiographie politique, artistique ou scientifique, l'histoire de l'histoire de l'architecture a fait l'objet de peu d'études. Les raisons en sont multiples : l'éparpillement des sources, la crise de l'architecture elle-même, les clivages qui peuvent exister entre architectes et historiens de l'art. Sans doute la " muséalisation " de l'architecture, la définition du patrimoine et la pédagogie, sont aujourd'hui des questions incontournables. Examiner les origines de l'historiographie de l'architecture - qui a connu récemment une émergence remarquable - est une priorité pour nourrir ce débat. La matière est riche. Depuis les publications des antiquaires du XVIIIe siècle, la connaissance des monuments ne cesse de progresser. L'exemple des naturalistes, des grands fondateurs de l'histoire politique et des archéologues suscitent la volonté de concevoir une autre histoire de l'architecture, plus scientifique. En France, les années 1863 à 1914 s'avèrent une véritable période charnière caractérisée par d'innombrables histoires, essais, études globales et partielles, par une évolution continue des moyens de représentation de l'architecture, par la multiplication des établissements d'enseignement et des approches pédagogiques. Parmi les grands acteurs de cette période figurent Viollet-le-Duc, Ramée, Dartein, Baudot, ou Ruprich-Robert. A l'issue de leurs travaux analysés ici méthodiquement dans leur contexte, le visage de l'histoire de l'architecture est entièrement transformé. Elle a trouvé sa propre définition, elle a affiné ses moyens de représentation et dispose désormais d'outils méthodologiques efficaces.},
-  eprint = {lx_qAAAAMAAJ},
-  eprinttype = {googlebooks},
   isbn = {978-2-7084-0585-1},
   langid = {french},
   pagetotal = {300}
