Completed EAHN paper

--- a/_biblio.bib
+++ b/_biblio.bib
@@ -1,4 +1,18 @@
 
+@incollection{argan:1966tipologia14,
+  title = {Tipologia},
+  booktitle = {Enciclopedia universale dell’arte},
+  author = {Argan, Giulio Carlo},
+  date = {1966},
+  volume = {14},
+  pages = {1--15},
+  publisher = {{Istituto per la collaborazione culturale}},
+  location = {{Venezia : Roma}},
+  langid = {italian}
+}
+% == BibLateX quality report for argan:1966tipologia14:
+% Missing required field 'editor'
+
 @incollection{belloni:2013ricomposizione,
   title = {Per una ricomposizione impossibile. Teoria della crisi e storia operante},
   booktitle = {Saverio Muratori architetto (Modena 1910-Roma 1973): a cento anni dalla nascita: atti del convegno itinerante},
@@ -45,6 +59,20 @@
   number = {4},
   pagetotal = {317},
   series = {Vita delle forme}
+}
+
+@book{biraghi:2019larchitetto,
+  title = {L'architetto come intellettuale},
+  author = {Biraghi, Marco},
+  date = {2019},
+  publisher = {{Giulio Einaudi editore s.p.a}},
+  location = {{Torino}},
+  isbn = {978-88-06-23992-3},
+  keywords = {Architects and community,Architecture,Philosophy,Vocational guidance},
+  langid = {italian},
+  number = {nuova serie 714},
+  pagetotal = {209},
+  series = {Piccola biblioteca Einaudi}
 }
 
 @book{cacciari:1993architecture,
@@ -336,7 +364,7 @@
 
 @article{cataldi:2002saverio6,
   title = {Saverio {{Muratori}} and the {{Italian}} School of Planning Typology},
-  author = {Cataldi, G. Richard and Maffei, Gian Luigi and Vaccaro, Paolo},
+  author = {Cataldi, Giancarlo and Maffei, Gian Luigi and Vaccaro, Paolo},
   date = {2002},
   journaltitle = {Urban Morphology},
   volume = {6},
@@ -394,6 +422,17 @@
 % == BibLateX quality report for cataldi:2015tipologie:
 % ? Unsure about the formatting of the booktitle
 
+@book{corona:2009ensayo,
+  title = {Ensayo sobre el proyecto},
+  author = {Corona Martínez, Alfonso},
+  date = {2009},
+  publisher = {{Nobuko}},
+  location = {{Buenos Aires}},
+  annotation = {OCLC: 1085854994},
+  isbn = {978-987-584-247-2},
+  langid = {spanish}
+}
+
 @book{costa:2015arquitetura,
   title = {Arquitetura tradicional no Mediterrâneo Ocidental: 1º Congresso Internacional, Mértola 13, 14 e 15 de Maio de 2015 = Traditional architecture in the Western Mediterranean: 1st International Conference, Mértola 13th, 14th and 15th May 2015},
   shorttitle = {Arquitetura tradicional no Mediterrâneo Ocidental},
@@ -417,7 +456,19 @@
   date = {1904},
   publisher = {{Electa}},
   location = {{Napoli}},
-  langid = {italiano}
+  langid = {italian}
+}
+
+@book{croce:1947concetto,
+  title = {Il concetto moderno della storia: discorso per l'inaugurazione dell'Instituto Italiano per gli studi storici},
+  shorttitle = {Il concetto moderno della storia},
+  author = {Croce, Benedetto},
+  date = {1947},
+  publisher = {{Gius.Laterza \& Figli}},
+  location = {{Bari}},
+  keywords = {conceito,História},
+  langid = {italian},
+  pagetotal = {46}
 }
 
 @article{cunningham:2010triangulating14,
@@ -466,8 +517,6 @@
   publisher = {{Pitagora}},
   location = {{Bologna}},
   annotation = {OCLC: 246978726},
-  editora = {Università degli Studi di Ferrara},
-  editoratype = {collaborator},
   isbn = {978-88-371-0733-8},
   langid = {italian},
   series = {Officina ferrarese di architettura}
@@ -509,6 +558,50 @@
   series = {1}
 }
 
+@mvbook{hegel:1986aesthetik,
+  title = {Vorlesungen über die Ästhetik},
+  author = {Hegel, Georg Wilhelm Friedrich},
+  date = {1986},
+  publisher = {{Suhrkamp}},
+  location = {{Frankfurt am Main}},
+  langid = {german},
+  volumes = {3}
+}
+
+@book{hegel:1986aesthetik1,
+  title = {Vorlesungen über die Ästhetik},
+  author = {Hegel, Georg Wilhelm Friedrich},
+  date = {1986},
+  edition = {Auf d. Grundlage d. Werke von 1832–1845 neu ed. Ausg.},
+  volume = {1},
+  publisher = {{Suhrkamp}},
+  location = {{Frankfurt am Main}},
+  isbn = {978-3-518-28213-7},
+  langid = {german},
+  number = {13},
+  series = {Werke}
+}
+
+@book{hegel:1986aesthetik2,
+  title = {Vorlesungen über die Ästhetik},
+  author = {Hegel, Georg Wilhelm Friedrich},
+  date = {1986},
+  volume = {2},
+  publisher = {{Suhrkamp}},
+  location = {{Frankfurt am Main}},
+  langid = {german}
+}
+
+@book{hegel:1986aesthetik3,
+  title = {Vorlesungen über die Ästhetik},
+  author = {Hegel, Georg Wilhelm Friedrich},
+  date = {1986},
+  volume = {3},
+  publisher = {{Suhrkamp}},
+  location = {{Frankfurt am Main}},
+  langid = {german}
+}
+
 @thesis{hoekstra:2005building,
   title = {Building versus {{Bildung}}. {{Manfredo Tafuri}} and the Construction of a Historical Discipline},
   author = {Hoekstra, Titia Rixt},
@@ -519,6 +612,7 @@
   urldate = {2019-12-16},
   isbn = {9036723094},
   langid = {english},
+  pagetotal = {545},
   type = {Ph.D. Dissertation (Humanities)}
 }
 % == BibLateX quality report for hoekstra:2005building:
@@ -550,6 +644,7 @@
   annotation = {OCLC: ocn276139074},
   isbn = {978-1-59726-578-2},
   keywords = {Architecture,Architecture and society,City planning,Human factors,Philosophy},
+  langid = {english},
   pagetotal = {459}
 }
 
@@ -689,6 +784,19 @@
   series = {Officina ferrarese di architettura}
 }
 
+@article{marzot:2002study6,
+  title = {The {{Study}} of {{Urban Form}} in {{Italy}}},
+  author = {Marzot, Nicola},
+  date = {2002},
+  journaltitle = {Urban Morphology},
+  volume = {6},
+  pages = {59--73},
+  langid = {english},
+  number = {2}
+}
+% == BibLateX quality report for marzot:2002study6:
+% ? Title looks like it was stored in title-case in Zotero
+
 @book{menghini:saverio,
   ids = {menghini:2009saverio},
   title = {Saverio Muratori. Didattica della Composizione architettonica nella Facoltà di Architettura di Roma 1954–1973},
@@ -716,6 +824,19 @@
 % == BibLateX quality report for miller:2017aldo:
 % ? Title looks like it was stored in title-case in Zotero
 
+@article{moneo:1978typology,
+  title = {On {{Typology}}},
+  author = {Moneo, Rafael},
+  date = {1978},
+  journaltitle = {Oppositions},
+  volume = {13},
+  pages = {23--45},
+  keywords = {Complementar},
+  langid = {english}
+}
+% == BibLateX quality report for moneo:1978typology:
+% ? Title looks like it was stored in title-case in Zotero
+
 @incollection{moschini:2013saverio,
   title = {Saverio Muratori e Aldo Rossi: le forme dell’architettura e le forme della città},
   shorttitle = {Saverio Muratori e Aldo Rossi},
@@ -729,6 +850,22 @@
   isbn = {978-88-98262-03-8},
   keywords = {20th century,Architecture,Congresses,Criticism and interpretation,History,Italy,Muratori; Saverio},
   langid = {italian}
+}
+
+@incollection{moudon:1994getting,
+  title = {Getting to Know the Built Landscape: {{Typomorphology}}},
+  shorttitle = {Typomorphology},
+  booktitle = {Ordering Space: Types in Architecture and Design},
+  author = {Moudon, Anne Vernez},
+  editor = {Franck, Karen A. and Schneekloth, Lynda H.},
+  date = {1994},
+  edition = {1},
+  pages = {289--311},
+  publisher = {{Van Nostrand Reinhold}},
+  location = {{New York}},
+  annotation = {ZSCC: NoCitationData[s0]  OCLC: 635754733},
+  isbn = {978-0-442-01233-5},
+  langid = {english}
 }
 
 @article{muratori:1959studiIX,
@@ -786,6 +923,20 @@
   langid = {italian},
   number = {18},
   series = {DiAP print. Teorie}
+}
+
+@book{panerai:2012analyse,
+  title = {Analyse urbaine},
+  author = {Panerai, Philippe},
+  date = {2012},
+  publisher = {{Parenthèses}},
+  location = {{Marseille}},
+  annotation = {OCLC: 900639070},
+  editora = {Demorgon, Marcelle and Depaule, Jean-Charles},
+  editoratype = {collaborator},
+  isbn = {978-2-86364-603-8},
+  keywords = {tau0005-outros},
+  langid = {french}
 }
 
 @book{papadakis:1990new,
@@ -983,7 +1134,7 @@
 }
 
 @book{rossi:1982architecture,
-  title = {The architecture of the city},
+  title = {The Architecture of the City},
   author = {Rossi, Aldo},
   date = {1982},
   publisher = {{MIT Press}},
@@ -992,14 +1143,14 @@
   editoratype = {collaborator},
   isbn = {978-0-262-18101-3},
   keywords = {Architecture,City planning},
-  langid = {engita},
+  langid = {english},
   pagetotal = {201},
-  series = {Oppositions books},
+  series = {Oppositions Books},
   translator = {Ghirardo, Diane Yvonne and Ockman, Joan}
 }
 
-@book{rossi:1995architettura,
-  title = {L' architettura della città},
+@book{rossi:1995larchitettura,
+  title = {L'architettura della città},
   author = {Rossi, Aldo},
   date = {1995},
   edition = {3},
@@ -1012,8 +1163,8 @@
   series = {[1966]}
 }
 
-@book{rossi:2006architettura,
-  title = {L' architettura della città},
+@book{rossi:2006larchitettura,
+  title = {L'architettura della città},
   author = {Rossi, Aldo},
   date = {2006},
   edition = {4},
@@ -1027,7 +1178,7 @@
 }
 
 @incollection{rossi:2013progetti,
-  title = {I progetti urbani per Roma di Saverio Muratori (1947--1967)},
+  title = {I progetti urbani per Roma di Saverio Muratori (1947–1967)},
   booktitle = {Saverio Muratori architetto (Modena 1910-Roma 1973): a cento anni dalla nascita: atti del convegno itinerante},
   author = {Rossi, Piero Ostilio},
   editor = {Cataldi, Giancarlo},
@@ -1251,6 +1402,22 @@
   annotation = {in {$<$}em{$>$}Storia dell'architettura italiana: 1944–1985,{$<$}/em{$>$} Torino 1986, pp. 230–234},
   keywords = {1900-1990,Arquitectura italiana},
   langid = {italian}
+}
+
+@incollection{tafuri:1991introduzione,
+  title = {Introduzione},
+  booktitle = {La piazza, la chiesa, il parco: saggi di storia dell'architettura (XV-XIX secolo)},
+  author = {Tafuri, Manfredo},
+  editor = {Tafuri, Manfredo},
+  date = {1991},
+  pages = {7--8},
+  publisher = {{Electa}},
+  location = {{Milano}},
+  isbn = {978-88-435-3468-5},
+  keywords = {Arquitectura,Itália,séc.15-19},
+  langid = {italian},
+  number = {58},
+  series = {Documenti di architettura}
 }
 
 @book{tafuri:1991piazza,
